Narrow exceptions to InterfaceError, OperationalError
